--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,12 @@ services:
       - "8888:80"
     volumes:
       - .:/var/www/html
+  sqlsrv:
+    build:
+    image: microsoft/mssql-server-linux
+    ports:
+      - "1433:1433"
+    environment:
+      - HOMEBREW_NO_ENV_FILTERING=1
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=yourStrong(!)Password
