--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   speedtest:
     build: .
-    image: adolfintel/speedtest:${TAG:-latest}
+    image: navair/speedtest:${TAG:-latest}
     ports:
       - 8888:80
     volumes:
