--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,19 @@ services:
       - "8888:80"
     volumes:
       - .:/var/www/html
+    links:
+      - db
+    environment:
+      - MYSQL_USERNAME=root
+      - MYSQL_PASSWORD=password
+      - MYSQL_SERVICE_NAME=db
+      - MYSQL_DATABASE_NAME=speedtest
+  db:
+    image: mysql:5.7
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./telemetry_mysql.sql:/docker-entrypoint-initdb.d/telemetry_mysql.sql
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=speedtest
